--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,17 @@
 			<version>2.14.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-client</artifactId>
+			<version>11.0.6</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.tek271.util2</groupId>
+			<artifactId>tecuj2</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
